[tool.poetry]
name = "hello_django"
version = "0.1.0"
description = "HELLO DJANGO"
authors = ["Trey Dickerson <treydickerson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
